--- a/front-end/jsbind/index.html
+++ b/front-end/jsbind/index.html
@@ -63,12 +63,12 @@
     <div class="col border">
         <label for="firstname">firstname</label>:
         <input id="firstname" value="salam">
-        <br/>Hello <span jsbind="text:firstname"></span>
+        <br/>Hello <strong jsbind="text:firstname"></strong>
     </div>
     <div class="col border">
         <xmp class="prettyprint lang-html text-wrap">
             <input id="firstname" value="salam">
-            Hello <span jsbind="text:firstname"></span>
+            Hello <strong jsbind="text:firstname"></strong>
         </xmp>
     </div>
 
