--- a/front-end/jsbind/index.html
+++ b/front-end/jsbind/index.html
@@ -62,34 +62,22 @@
 <div class="row row-cols-lg-2 row-cols-1">
     <div class="col border">
         <label for="firstname">firstname</label>:
-        <input id="firstname" value="salam">
+        <input id="firstname" value="Mehdi">
         <br/>Hello <strong jsbind="text:firstname"></strong>
     </div>
     <div class="col border">
         <xmp class="prettyprint lang-html text-wrap">
-            <input id="firstname" value="salam">
+            <input id="firstname" value="Mehdi">
             Hello <strong jsbind="text:firstname"></strong>
         </xmp>
     </div>
 
     <div class="col border">
-        lastname <input id="lastname" value="salar">
+        lastname <input id="lastname" value="Salartayefeh">
     </div>
     <div class="col border">
         <xmp class="prettyprint lang-html text-wrap">
-            <input id="lastname" value="salar">
-        </xmp>
-    </div>
-
-    <div class="col border">
-        <div class="text-secondary">
-            //We could use variables in javascript area
-        </div>
-        <button class="btn btn-primary btn-sm" onclick="alert(firstname +'-'+lastname)">Alert full name</button>
-    </div>
-    <div class="col border">
-        <xmp class="prettyprint lang-html text-wrap">
-            <button onclick="alert(firstname +'-'+lastname)">Alert full name</button>
+            <input id="lastname" value="Salartayefeh">
         </xmp>
     </div>
 
@@ -108,6 +96,18 @@
     <div class="col border">
         <xmp class="prettyprint lang-html text-wrap">
             <input type="color" id="colory" value="#00ff00">
+        </xmp>
+    </div>
+
+    <div class="col border">
+        <div class="text-secondary">
+            //We could use variables in javascript area
+        </div>
+        <button class="btn btn-primary btn-sm" onclick="alert(firstname +'-'+lastname)">Alert full name</button>
+    </div>
+    <div class="col border">
+        <xmp class="prettyprint lang-html text-wrap">
+            <button onclick="alert(firstname +'-'+lastname)">Alert full name</button>
         </xmp>
     </div>
 
