--- a/front-end/jspage/index.html
+++ b/front-end/jspage/index.html
@@ -26,9 +26,9 @@
 
     <div class="col border">
         <nav>
-            <a jspage="/subpages/page1.html" class="active">Page 1</a>
-            <a jspage="/subpages/page2.html">Page 2</a>
-            <a jspage="/subpages/page3.html">Page 3</a>
+            <a jspage="subpages/page1.html" class="active">Page 1</a>
+            <a jspage="subpages/page2.html">Page 2</a>
+            <a jspage="subpages/page3.html">Page 3</a>
         </nav>
         <div jspage-target>
             by clicking on each above links, it's url will be loaded
@@ -38,9 +38,9 @@
     <div class="col border">
         <xmp class="prettyprint lang-html ">
     <nav>
-        <a jspage="/subpages/page1.html">Page 1</a>
-        <a jspage="/subpages/page2.html">Page 2</a>
-        <a jspage="/subpages/page3.html">Page 3</a>
+        <a jspage="subpages/page1.html">Page 1</a>
+        <a jspage="subpages/page2.html">Page 2</a>
+        <a jspage="subpages/page3.html">Page 3</a>
     </nav>
     <div jspage-target>
         by clicking on each above links, it's url will be loaded
