--- a/front-end/jspage/index.html
+++ b/front-end/jspage/index.html
@@ -22,7 +22,7 @@
 
     <xmp class="prettyprint lang-html ">
         <nav>
-            <a jspage="subpages/page1.html">Page 1</a>
+            <a jspage="subpages/page1.html" class="active">Page 1</a>
             <a jspage="subpages/page2.html">Page 2</a>
             <a jspage="subpages/page3.html">Page 3</a>
         </nav>
