--- a/front-end/jswizard/index.html
+++ b/front-end/jswizard/index.html
@@ -45,6 +45,8 @@
 </h1>
 <div class="my-5">
     <b>jsWizard</b> is a tiny library for easy wizard navigation in a SPA.
+    <br>
+    <a href="https://github.com/mehdi-salartayefeh/jswizard">github page</a>
 </div>
 <div class="row">
     <aside class="col-sm-4">
@@ -176,6 +178,7 @@
         })
     </script>
 </xmp>
+
 
 
 </body>
